# noir_rs

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: test.yml
crates/nargo/: Cargo.toml
crates/nargo/src/: errors.rs  lib.rs
crates/nargo/src/ops/: execute.rs
crates/noir_rs/: Cargo.toml
crates/noir_rs/src/: main.rs  netsrs.rs  prove.rs  verify.rs
crates/noir_rs/src/srs/: localsrs.rs  mod.rs  netsrs.rs
