[workspace]
members = ["aztec-packages/barretenberg/bb_rs"]
resolver = "2"

[workspace.package]
name = "noir_rs"
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Nowak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
thiserror = "1.0.58"