[workspace]
members = ["aztec-packages/barretenberg/bb_rs", "crates/noir_rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Nowak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
thiserror = "1.0.58"
bb_rs = { path = "aztec-packages/barretenberg/bb_rs" }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12.1", features = ["blocking"] }
