[workspace]
members = ["aztec-packages/barretenberg/bb_rs", "crates/nargo", "crates/noir_rs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bartosz Nowak"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
acir = "0.41.0"
acvm = "0.41.0"
acvm_blackbox_solver = "0.41.0"
bn254_blackbox_solver = "0.39.0"
base64 = "0.22.0"
bb_rs = { path = "aztec-packages/barretenberg/bb_rs" }
noir_rs = { path = "crates/noir_rs" }
nargo = { path = "crates/nargo" }
bincode = "1.3.3"
flate2 = "1.0.28"
hex = "0.4.3"
reqwest = { version = "0.12.1", features = ["blocking"] }
serde = "1.0.197"
thiserror = "1.0.58"
tracing = "0.1"
tracing-subscriber = "0.3"
