[package]
name = "noir_rs"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb_rs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true